# Neural-Style-Transfer-v3

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
demo/: streamlit_app.py
scripts/: generate_data.py  sample.py  train.py
src/nst/: __init__.py  config.py  core.py  data.py  evaluation.py  models.py  sampling.py
tests/: test_core.py  test_models.py
